Update Sharpening Prediction

--- a/sany.ipynb
+++ b/sany.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "source": [
     "t = torch.cuda.get_device_properties(0).total_memory\r\n",
     "r = torch.cuda.memory_reserved(0)\r\n",
@@ -233,6 +233,70 @@
      "name": "stdout",
      "text": [
       "4294967296 0 0 0\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "def sharpening_prediction(i : torch.Tensor, temperature:float, log : bool = True):\r\n",
+    "    i = i / temperature\r\n",
+    "    if log:\r\n",
+    "        f = torch.nn.LogSoftmax(dim=1)\r\n",
+    "    else:\r\n",
+    "        f = torch.nn.Softmax(dim=1)\r\n",
+    "    return f(i)\r\n",
+    "\r\n",
+    "def confidence_based_masking(x: torch.Tensor, beta:float):\r\n",
+    "    f = torch.nn.LogSoftmax(dim=1)\r\n",
+    "    y = f(x)\r\n",
+    "    maxPs, _ = torch.max(y, dim = 1)\r\n",
+    "    \r\n",
+    "    pass"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "import torch\r\n",
+    "\r\n",
+    "a = torch.rand((10, 2)) * 10\r\n",
+    "b = sharpening_prediction(a, 0.5)\r\n",
+    "print(a, b, end = '')\r\n",
+    "max_b, _ = torch.max(b, dim=1)\r\n",
+    "uses_batch_id = max_b > 0.5\r\n",
+    "print(uses_batch_id)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([[8.6023, 9.0657],\n",
+      "        [1.4684, 6.4086],\n",
+      "        [1.8653, 5.9751],\n",
+      "        [8.6026, 5.3899],\n",
+      "        [6.7140, 5.2371],\n",
+      "        [6.6462, 8.0812],\n",
+      "        [1.8522, 3.2141],\n",
+      "        [5.9392, 3.2032],\n",
+      "        [3.4509, 4.8256],\n",
+      "        [8.4353, 3.8566]]) tensor([[-1.2603e+00, -3.3348e-01],\n",
+      "        [-9.8805e+00, -5.1139e-05],\n",
+      "        [-8.2198e+00, -2.6926e-04],\n",
+      "        [-1.6186e-03, -6.4270e+00],\n",
+      "        [-5.0826e-02, -3.0047e+00],\n",
+      "        [-2.9251e+00, -5.5151e-02],\n",
+      "        [-2.7873e+00, -6.3565e-02],\n",
+      "        [-4.1939e-03, -5.4762e+00],\n",
+      "        [-2.8113e+00, -6.2010e-02],\n",
+      "        [-1.0549e-04, -9.1574e+00]])tensor([False, False, False, False, False, False, False, False, False, False])\n"
      ]
     }
    ],
