train success update

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -3,17 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torchvision\n",
     "import torchvision.transforms as transforms"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
    "source": [
     "transform = transforms.Compose(\n",
     "    [transforms.ToTensor(),\n",
@@ -33,22 +44,13 @@
     "\n",
     "classes = ('plane', 'car', 'bird', 'cat',\n",
     "           'deer', 'dog', 'frog', 'horse', 'ship', 'truck')"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Files already downloaded and verified\n",
-      "Files already downloaded and verified\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
@@ -73,64 +75,38 @@
     "        x = self.fc3(x)\n",
     "        return x\n",
     "\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "device = torch.device('cuda')\n",
     "net = Net().to(device)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import torch.optim as optim\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "source": [
-    "for epoch in range(10):   # 데이터셋을 수차례 반복합니다.\n",
-    "    running_loss = 0.0\n",
-    "    for i, data in enumerate(trainloader, 0):\n",
-    "        # [inputs, labels]의 목록인 data로부터 입력을 받은 후;\n",
-    "        inputs, labels = (t.to(device) for t in data)\n",
-    "\n",
-    "        # 변화도(Gradient) 매개변수를 0으로 만들고\n",
-    "        optimizer.zero_grad()\n",
-    "\n",
-    "        # 순전파 + 역전파 + 최적화를 한 후\n",
-    "        outputs = net(inputs)\n",
-    "        loss = criterion(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        # 통계를 출력합니다.\n",
-    "        running_loss += loss.item()\n",
-    "        if i % 400 == 399:    # print every 20 mini-batches\n",
-    "            print('[%d, %5d] loss: %.5f' %\n",
-    "                  (epoch + 1, i + 1, running_loss / 400))\n",
-    "            running_loss = 0.0\n",
-    "\n",
-    "print('Finished Training')"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[1,   400] loss: 1.44643\n",
       "[1,   800] loss: 1.39325\n",
@@ -166,30 +142,54 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "for epoch in range(10):   # 데이터셋을 수차례 반복합니다.\n",
+    "    running_loss = 0.0\n",
+    "    for i, data in enumerate(trainloader, 0):\n",
+    "        # [inputs, labels]의 목록인 data로부터 입력을 받은 후;\n",
+    "        inputs, labels = (t.to(device) for t in data)\n",
+    "\n",
+    "        # 변화도(Gradient) 매개변수를 0으로 만들고\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # 순전파 + 역전파 + 최적화를 한 후\n",
+    "        outputs = net(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # 통계를 출력합니다.\n",
+    "        running_loss += loss.item()\n",
+    "        if i % 400 == 399:    # print every 20 mini-batches\n",
+    "            print('[%d, %5d] loss: %.5f' %\n",
+    "                  (epoch + 1, i + 1, running_loss / 400))\n",
+    "            running_loss = 0.0\n",
+    "\n",
+    "print('Finished Training')"
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "961342292b0d5152411d449f6b406d5074b05bb69c5a71f49c708121cac2a35f"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.5 64-bit ('uda': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.5",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('uda': conda)"
-  },
-  "interpreter": {
-   "hash": "961342292b0d5152411d449f6b406d5074b05bb69c5a71f49c708121cac2a35f"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
